--- a/dlc_site/src/index.css
+++ b/dlc_site/src/index.css
@@ -1,3 +1,12 @@
+html, body {
+  box-sizing: border-box;
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  background-color: rgb(24, 26, 27);
+
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +20,69 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.header-container {
+  padding: 2em;
+  color: white;
+  background-color: rgb(79, 79, 80);
+  text-align: left;
+}
+
+.site-title-heading {
+  margin: 0;
+  font-family: 'Kanit', sans-serif;
+}
+
+.site-location-subheader {
+  margin: 0;
+  font-family: 'Kanit', sans-serif;
+  color: orange;
+}
+
+.write-week-container {
+  margin: 1em;
+}
+
+.write-day-container {
+  background-color: rgb(101, 101, 102);
+  margin: .5em;
+  padding: 1em;
+  border-radius: 10px;
+  font-family: Montserrat, sans-serif;
+}
+
+.add-day-btn {
+  font-size: 2em;
+  color: white
+}
+
+.add-day-btn:hover {
+  color: orange
+}
+
+.write-day-header {
+  text-align: left;
+  color: rgb(221, 144, 0);
+}
+
+.exercise-header {
+  border-bottom: 3px solid rgb(216, 214, 214);
+  color: rgb(212, 211, 211);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-weight: 500;
+  margin-left: 5%;
+}
+
+.add-exercise-btn {
+  font-size: 1.5em;
+  color: rgb(255, 255, 255);
+  margin-left: 5%;
+}
+
+.add-exercise-btn:hover {
+  color: rgb(49, 137, 209)
+}
+
+
