--- a/dlc_site/src/index.css
+++ b/dlc_site/src/index.css
@@ -51,6 +51,7 @@ code {
   font-family: Montserrat, sans-serif;
 }
 
+
 .add-day-btn {
   font-size: 2em;
   color: white
@@ -63,6 +64,16 @@ code {
 .write-day-header {
   text-align: left;
   color: rgb(221, 144, 0);
+  display: flex;
+  justify-content: space-between;
+}
+
+.day-header-gear {
+  font-size: 1.5em;
+}
+
+.day-header-gear:hover {
+  color: rgb(248, 174, 35);
 }
 
 .exercise-header {
@@ -83,6 +94,25 @@ code {
 
 .add-exercise-btn:hover {
   color: rgb(49, 137, 209)
+}
+
+.exercise-content-row {
+  width: 95%; 
+  display: flex; 
+  flex-direction: row; 
+  justify-content: space-between; 
+  align-items: center;
+  height:3.5em;
+}
+
+.exercise-content-row:hover {
+  background-color: rgb(136, 133, 133);
+}
+
+.exercise-content-row > input {
+  background-color: rgb(146, 146, 146);
+  border: 1px solid grey;
+  padding: 1em;
 }
 
 
