--- a/dlc_site/src/index.css
+++ b/dlc_site/src/index.css
@@ -41,11 +41,15 @@ code {
 
 .write-week-container {
   margin: 1em;
+  padding: 1em;
+  padding-bottom: 3em;
 }
 
 .write-day-container {
   background-color: rgb(101, 101, 102);
   margin: .5em;
+  margin-bottom: 2em;
+  min-height: 10em;
   padding: 1em;
   border-radius: 10px;
   font-family: Montserrat, sans-serif;
@@ -66,6 +70,7 @@ code {
   color: rgb(221, 144, 0);
   display: flex;
   justify-content: space-between;
+  position: relative;
 }
 
 .day-header-gear {
