Experimenting with Spring security, added LoginForm and SignupForm

--- a/dlc_site/src/index.css
+++ b/dlc_site/src/index.css
@@ -26,6 +26,15 @@ code {
   color: white;
   background-color: rgb(79, 79, 80);
   text-align: left;
+  display: flex;
+  justify-content: space-between;
+}
+
+.header-titles {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .site-title-heading {
