--- a/dlc_site/src/index.css
+++ b/dlc_site/src/index.css
@@ -28,6 +28,7 @@ code {
   text-align: left;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .header-titles {
@@ -35,6 +36,8 @@ code {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-left: 2em;
+
 }
 
 .site-title-heading {
